--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,6 +5,12 @@
   </small>
   <nav>
     <ul>
+    <% if signed_in? %>
+      <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+      <li><%= link_to "Profile", current_user %></li>
+    <% else %>
+      <li><%= link_to "Sign in", signin_path %></li>
+    <% end %>
       <li><%= link_to "About",   '#' %></li>
       <li><%= link_to "Contact", '#' %></li>
       <li><%= link_to "Update Log",    '#' %></li>
