--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,10 @@
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
-          <%= link_to "Sorcerer's Minion", '#', id: "logo" %>
+          <%= link_to "Sorcerer's Minion", root_path, id: "logo" %>
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Home",    '#' %></li>
-              <li><%= link_to "Offerings",    '#' %></li>
-              <li><%= link_to "Contact", '#' %></li>
+              <li><%= link_to "Offering Search", root_path %></li>
             </ul>
           </nav>
         </div>
@@ -27,7 +25,7 @@
     <div class="container">
       <%= yield %>
       <%= render 'layouts/footer' %>
-      <%= debug(params) if Rails.env.development? %>
+      <%= debug(params) if signed_in? %>
     </div>
   </body>
 </html>
