--- a/app/views/portal_pages/contact.html.erb
+++ b/app/views/portal_pages/contact.html.erb
@@ -1,2 +1,3 @@
-<h1>PortalPages#contact</h1>
-<p>Find me in app/views/portal_pages/contact.html.erb</p>
+<h1>Contact</h1>
+<p>Looking for Bugs, Suggestions, and Contributors! <a href="mailto:fodderspam@foulweather.net">email me</a>
+</p>
