--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,12 +8,10 @@
     <% if signed_in? %>
       <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
       <li><%= link_to "Profile", current_user %></li>
-    <% else %>
-      <li><%= link_to "Sign in", signin_path %></li>
     <% end %>
       <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
-      <li><%= link_to "Update Log",    '#' %></li>
+      <li><%= link_to "Contact", contact_path %></li>
+      <li><%= link_to "Update Log", update_path %></li>
     </ul>
   </nav>
 </footer>
