--- a/app/views/portal_pages/update.html.erb
+++ b/app/views/portal_pages/update.html.erb
@@ -1,12 +1,21 @@
-<h2>build notes: May 23, 2013</h2>
+<h2>Build notes: 0.1.1 | 2013-05-25</h2>
 <p>
-Published unfinished Offering search table.<br />
-Known Issues:
+Added information on Souls you can obtain from a mission. Unfortunetly they are unavailable via searches until further notice<br />
+Added new searchable parameters:<br />
   <ul>
-	<li>Missing Avalon Pact: Mission 9</li>
-	<li>Missing Avalon Pact: Mission 10</li>
-	<li>Missing Forgotten Pact: Hour of Zalfire</li>
-	<li>Most Bosses missing Offering drop information</li>
-	<li>Search index missing styling</li>
-  </u>
+  	<li>You may search for Main Quest Bosses by their NAME.</li>
+  	<li>You may now search for loot obtained by breaking monster parts.</li>
+  </ul>
+Added information for Avalon and Forgotten Pact missions:<br />
+  <ul>
+  	<li>IX. Penitence</li>
+  	<li>X. Recursion</li>
+  	<li>Hour of Auburn</li>
+  	<li>Hour of Zalfire</li>
+  </ul>
+</p>
+
+<h2>Build notes: 0.1.0 | 2013-05-25</h2>
+<p>
+Public Release<br />
 </p>
