--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,19 +1,24 @@
 @import "bootstrap";
 
 .tb-missions tr {
-  border-collapse: collapse;
-  border: 1px solid black;
-
+  border-collapse:  collapse;
+  border:           1px solid black;
 }
+
+.tr-desc2 ul {
+  list-style-type:  none;
+  list-style-image: none;
+}
+
 
 /* mixins, variables, etc. */
 
 $grayMediumLight: #eaeaea;
 
 @mixin box_sizing {
-  -moz-box-sizing: border-box; 
+  -moz-box-sizing:    border-box; 
   -webkit-box-sizing: border-box; 
-  box-sizing: border-box;
+  box-sizing:         border-box;
 }
 
 $grayMediumLight: #eaeaea;
