--- a/app/views/portal_pages/update.html.erb
+++ b/app/views/portal_pages/update.html.erb
@@ -4,7 +4,7 @@ Added information on Souls you can obtain from a mission. Unfortunetly they are 
 Added new searchable parameters:<br />
   <ul>
   	<li>You may search for Main Quest Bosses by their NAME.</li>
-  	<li>You may now search for loot obtained by breaking monster parts.</li>
+  	<li>You may now search for the loot obtained by breaking monster parts by NAME.</li>
   </ul>
 Added information for Avalon and Forgotten Pact missions:<br />
   <ul>
