Update contact.html. Add Soul Shard Searches

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     <%= link_to "Sorcerer's Minion", root_path %>
-    by Ray Farias
+    by <%= link_to "Ray Farias", "http://twitter.com/sgnl606" %>
   </small>
   <nav>
     <ul>
