--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -31,6 +31,9 @@
       </ul>
       </td>
       <td>
+      <ul>Souls:
+        <li><%= mission.drop_2 %></li>
+      </ul>
       </td>
     </tr>
 </table>
