--- a/app/views/portal_pages/contact.html.erb
+++ b/app/views/portal_pages/contact.html.erb
@@ -1,3 +1,12 @@
-<h1>Contact</h1>
-<p>Looking for Bugs, Suggestions, and Contributors! <a href="mailto:fodderspam@foulweather.net">email me</a>
+<h1>Contact | About Me</h1>
+<p>
+	<ul>
+      <li><%= link_to "Twitter", "https://twitter.com/SGNL606" %></li>
+      <li><%= link_to "bit.ly",  "http://bit.ly/sorcerersminion" %></li>
+    </ul>
+</p>
+<p>
+I created this as a project to Learn Ruby, Rails, CSS3, HTML5 and whatever else I could throw in. This site is largely based on a tutorial site made through the <%= link_to "Ruby on Rails Tutorial by Michael Hartl", "http://www.railstutorial.org" %>. Information was sourced through the <%= link_to "Soul Sacrifice Wikia", "soulsacrifice.wikia.com/‎" %> and various other gaming communitys like <%= link_to "GameFaqs", "http://www.gamefaqs.com/boards/668738-soul-sacrifice" %> and <%= link_to "Reddit", "http://redd.it/1exvqk"%>.
+</p>
+<p>Looking for Bugs, Suggestions, and Contributors for future projects or a webdev mentor! <a href="mailto:fodderspam@foulweather.net">email me</a>
 </p>
