--- a/app/views/portal_pages/update.html.erb
+++ b/app/views/portal_pages/update.html.erb
@@ -1,3 +1,11 @@
+<h2>Build notesL 0.1.2 | 2013-05-26</h2>
+<p>
+Removed searches by "Monster Name" (e.g. Harpy, Jack-O'-Lantern, etc) but instead  enabled searching for soul essences found within a mission. Please note that these are without the "Life Essence" and "Soul Sessence" prefixes as well as the "+" and "++" suffixes. These may be added in the future when information is more available.<br /><br />
+
+Added contact information for Twitter.<br />
+Added various community links: <%= link_to "Reddit", "http://redd.it/1exvqk"%>, <%= link_to "GameFaqs", "http://www.gamefaqs.com/boards/668738-soul-sacrifice" %> and T<%= link_to "Soul Sacrifice Wikia", "soulsacrifice.wikia.com/‎" %>.
+</p>
+
 <h2>Build notes: 0.1.1 | 2013-05-25</h2>
 <p>
 Added information on Souls you can obtain from a mission. Unfortunetly they are unavailable via searches until further notice<br />
