--- a/app/views/portal_pages/update.html.erb
+++ b/app/views/portal_pages/update.html.erb
@@ -1,4 +1,12 @@
-<h2>Build notesL 0.1.2 | 2013-05-26</h2>
+<h2>Build notes 0.1.3 | 2013-05-27</h2>
+<p>
+Improved search result display - User will no longer be shown 'empty' information. For example, previously if the Hunt's objective had no weakness you would see "Weakness: ". Now this field will be hidden from view.<br />
+Changed the table stylings.<br /><br />
+
+Fixed a bug with the databse showing results more than once. (Thanks Frigaku on GameFaqs)<br />
+</p>
+
+<h2>Build notes 0.1.2 | 2013-05-26</h2>
 <p>
 Removed searches by "Monster Name" (e.g. Harpy, Jack-O'-Lantern, etc) but instead  enabled searching for soul essences found within a mission. Please note that these are without the "Life Essence" and "Soul Sessence" prefixes as well as the "+" and "++" suffixes. These may be added in the future when information is more available.<br /><br />
 
