--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag missions_path, :method => 'get' do %>
   <p>
     <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", :name => nil %>
+    <%= submit_tag "Sacrifice", :name => nil, :class => 'btn-custom' %>
   </p>
 <% end %>
 
