Update Log added for previous commit

--- a/app/views/portal_pages/update.html.erb
+++ b/app/views/portal_pages/update.html.erb
@@ -5,6 +5,7 @@ Changed the table stylings.<br /><br />
 
 Fixed a bug with the databse showing results more than once. (Thanks Frigaku on GameFaqs)<br />
 </p>
+Hotfix: Added Colorz!
 
 <h2>Build notes 0.1.2 | 2013-05-26</h2>
 <p>
