--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -47,6 +47,7 @@
     <strong>Search for Soul Essences:</strong> "Unicorn" or "Goblin" 
     (Currently no information in database for "+" or "++").<br />
     <strong>Search for Offerings</strong>: "Flametree Root" or "Monsternip (M)". Breakables are available as well.<br /><p><p>
+    Looking for those willing to provide translations!<p></p>
     We are missing information still... to help <%= link_to 'Click here', help_path %>
 </p>
 <% end %>
