--- a/app/views/portal_pages/update.html.erb
+++ b/app/views/portal_pages/update.html.erb
@@ -1,3 +1,16 @@
+<h2>Build Notes 0.1.4 | 2013-05-28</h2>
+<p>
+Thanks for help from the Community we have updated the Main details for these Missions:
+Forgotten Pacts:
+<ul>
+  <li>Hour of Jonquil</li>
+  <li>Hour of Chartreuse</li>
+  <li>Hour of Amber (DLC)</li>
+</ul>
+Please note that these missions may be missing info such as: Soul Essences and Breakables.<br />
+Thanks Chris E.!
+</p>
+
 <h2>Build notes 0.1.3 | 2013-05-27</h2>
 <p>
 Improved search result display - User will no longer be shown 'empty' information. For example, previously if the Hunt's objective had no weakness you would see "Weakness: ". Now this field will be hidden from view.<br />
