remove 'help ask' at index

--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -48,7 +48,7 @@
     (Currently no information in database for "+" or "++").<br />
     <strong>Search for Offerings</strong>: "Flametree Root" or "Monsternip (M)". Breakables are available as well.<br /><p><p>
     Looking for those willing to provide translations!<p></p>
-    We are missing information still... to help <%= link_to 'Click here', help_path %>
+    <!-- We are missing information still... to help <%= link_to 'Click here', help_path %> -->
 </p>
 <% end %>
 <br />
