--- a/app/views/portal_pages/help.html.erb
+++ b/app/views/portal_pages/help.html.erb
@@ -1,9 +1,5 @@
 <h1>Help</h1>
 We are currently missing details for these missions...<p>
-Forgotten Pact
-<ul>
-	<li>Hour of Jonquil</li>
-	<li>Hour of Chartreuse</li>
-</ul>
+<h2>No help needed at the moment! yay :></h2>
 
 If you have these quests unlocked please go to the <%= link_to "Soul Sacrifice Wikia", "soulsacrifice.wikia.com/‎" %> or send me an <a href="mailto:fodderspam@foulweather.net">email</a>.
