--- a/app/views/portal_pages/update.html.erb
+++ b/app/views/portal_pages/update.html.erb
@@ -8,7 +8,7 @@ Forgotten Pacts:
   <li>Hour of Amber (DLC)</li>
 </ul>
 Please note that these missions may be missing info such as: Soul Essences and Breakables.<br />
-Thanks Chris E.!
+Thanks NeckoDotExE!
 </p>
 
 <h2>Build notes 0.1.3 | 2013-05-27</h2>
