--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,13 +15,13 @@
   color: #fff !important; 
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.16); 
   -webkit-font-smoothing: antialiased; 
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 
 #search {
-  width: 40%;
+  width: 30%;
 }
 
 .mission-detail td {
@@ -142,7 +142,7 @@ footer {
   a {
     color: $gray;
     &:hover { 
-      color: $grayDarker;
+      color: $white;
     }
   }  
   small { 
