update 'update log' and some css

--- a/app/views/portal_pages/update.html.erb
+++ b/app/views/portal_pages/update.html.erb
@@ -1,6 +1,6 @@
 <h2>Build Notes 0.1.4 | 2013-05-28</h2>
 <p>
-Thanks for help from the Community we have updated the Main details for these Missions:
+Thanks for help from the NeckoDotExE we have updated the Main details for these Missions:
 Forgotten Pacts:
 <ul>
   <li>Hour of Jonquil</li>
@@ -8,7 +8,6 @@ Forgotten Pacts:
   <li>Hour of Amber (DLC)</li>
 </ul>
 Please note that these missions may be missing info such as: Soul Essences and Breakables.<br />
-Thanks NeckoDotExE!
 </p>
 
 <h2>Build notes 0.1.3 | 2013-05-27</h2>
@@ -30,13 +29,13 @@ Added various community links: <%= link_to "Reddit", "http://redd.it/1exvqk"%>, 
 
 <h2>Build notes: 0.1.1 | 2013-05-25</h2>
 <p>
-Added information on Souls you can obtain from a mission. Unfortunetly they are unavailable via searches until further notice<br />
+Added information on Souls you can obtain from a mission. Unfortunetly they are unavailable via searches until further notice.<br />
 Added new searchable parameters:<br />
   <ul>
-  	<li>You may search for Main Quest Bosses by their NAME.</li>
+  	<li><strike>You may search for Main Quest Bosses by their NAME.</strike></li>
   	<li>You may now search for the loot obtained by breaking monster parts by NAME.</li>
   </ul>
-Added information for Avalon and Forgotten Pact missions:<br />
+Thanks to NeckoDotExE I've added information for Avalon and Forgotten Pact missions:<br />
   <ul>
   	<li>IX. Penitence</li>
   	<li>X. Recursion</li>
