--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,8 +28,7 @@
   padding:           10px;
   border-bottom:     1px solid black;
   border-top:        1px solid black;
-  border-collapse:   collapse;`
-
+  border-collapse:   collapse;
   table-layout: fixed;
 }
 
