--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,11 +13,14 @@
   background-image: linear-gradient(#d01414, #a21010); 
   border-color: #a21010 #a21010 hsl(360, 82%, 32.5%); 
   color: #fff !important; 
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.16); 
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1); 
   -webkit-font-smoothing: antialiased; 
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
+  -webkit-border-top-right-radius: 10px;
+  -moz-border-radius-topright: 10px;
+  border-top-right-radius: 10px;
+  -webkit-border-bottom-left-radius: 10px;
+  -moz-border-radius-bottomleft: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 #search {
@@ -126,7 +129,7 @@ p {
   font-weight: bold;
   line-height: 1;
   &:hover {
-    color: white;
+    background: none;
     text-decoration: none;
   }
 }
@@ -141,7 +144,8 @@ footer {
   a {
     color: $gray;
     &:hover { 
-      color: $white;
+      color: $gray;
+      background: $white;
     }
   }  
   small { 
